tests/bad/return/no_return.go
package main;

func f() int {}

func main () {}

/*
missing return at end of function
*/
